--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://eressea.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Xontormia Express
+subtitle: Die Zeitung von Eressea
+author: Enno Rehling
 simple_search: https://www.google.com/search
 description:
 
